fix: ignora tox.ini

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.projectKey=fga-eps-mds_2022-1-schedula-gerenciador-de-localidades
 sonar.organization=fga-eps-mds-1
 
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=metrics/**
