--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,9 @@ envlist = py39
 skipsdist = True
  
 [testenv]
+exclude = 
+    metrics
+    tests
 deps =
     pytest
     coverage
@@ -11,4 +14,4 @@ deps =
     passlib
     requests
     sqlalchemy
-commands = pytest -vv --cov --cov-report=xml:coverage.xml
+commands = pytest -vv --cov --ignore=metrics --cov-report=xml:coverage.xml
