adicionei variaveis para tox.ni

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,9 @@ skipsdist = True
 exclude = 
     metrics
     tests
+setenv = 
+    secret=schedula
+    JWT_SECRET_KEY=schedula
 deps =
     pytest
     coverage
