--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ exclude =
 setenv = 
     secret=schedula
     JWT_SECRET_KEY=schedula
+    parameter=password
 deps =
     pytest
     coverage
@@ -17,4 +18,5 @@ deps =
     passlib
     requests
     sqlalchemy
+    PyJWT
 commands = pytest -vv --cov --ignore=metrics --cov-report=xml:coverage.xml
