--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+FRONTEND_URL=http://localhost:8000
 APP_PORT_GERENCIADOR_LOCALIDADES=5000
 
 DATABASE_URL=postgresql+psycopg2://postgres:postgres@db:5432
