--- a/.github/workflows/location-cd.yml
+++ b/.github/workflows/location-cd.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 jobs:
   ci:
-    uses: fga-eps-mds/2022-2-schedula-gerenciador-de-localidades/.github/workflows/user-ci.yml@develop
+    uses: fga-eps-mds/2022-2-schedula-gerenciador-de-localidades/.github/workflows/location-ci.yml@main
   build:
     runs-on: ubuntu-latest
     steps:
